# GAME_AED

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  exemplo_questao.json  game_log.txt  hall.txt
assets/: api_log.txt  exemplo_questao.json
include/: api.h  board.h  dice_animation.h  end_screen.h  hall.h  main_menu.h  player_animation.h  player_names.h  prompt.h  question.h  score.h  subthemes.h  timer.h  topics.h
src/: api.c  board.c  dice_animation.c  end_screen.c  hall.c  main.c  main_menu.c  player_animation.c  player_animation.h  player_names.c  prompt.c  question.c  score.c  subthemes.c  timer.c  topics.c
